<resources>
    <string name="app_name">SkriningParu</string>
    <string name="label_agree">Ya, Saya Setuju</string>
    <string name="action_accept">Setuju</string>
    <string name="action_back">Kembali</string>
    <string name="title_input_personal_data">Masukkan Data Diri</string>
    <string name="label_full_name">Nama Lengkap (Sesuai KTP)</string>
    <string name="label_gender">Jenis Kelamin</string>
    <string name="label_phone_number">Nomor HP</string>
    <string name="title_consent_sheet">Consent Sheet</string>
    <string name="title_screening_data">Screening Data</string>
    <string name="title_advance_screening">Screening Lanjutan</string>
    <string name="title_personal_data">Identitas Diri</string>
    <string name="action_start">Mulai</string>
    <string name="action_next">Selanjutnya</string>
    <string name="label_male">Laki laki</string>
    <string name="label_female">Perempuan</string>
    <string name="label_result">Hasil</string>
    <string name="label_feedback">Saran</string>
    <string name="label_welcome">Lakukan Skrining TB Paru mandiri dengan mudah dan menyenangkan</string>
    <string name="action_ready_screening">Mulai Skrining</string>
    <string name="action_boarding">Apa itu TB Paru?</string>
    <string name="action_recheck">Periksa Lagi</string>
    <string name="action_sure">Yakin</string>
    <string name="label_validate_data">Apakah anda sudah yakin data yang anda masukan sudah benar?</string>
    <string name="title_back_to_previous_page">Apakah anda yakin kembali ke halaman sebelumnya?</string>
    <string name="label_please_finish_this_screening">Anda belum menyelesaikan test skrining, apakah anda yakin untuk memeriksa kembali data diri anda dan data pada skrining pertama?</string>
    <string name="action_not_sure">Tidak Yakin</string>
    <string name="title_are_you_sure_exit">Apakah anda yakin keluar?</string>
    <string name="label_do_you_want_cancel">Anda belum menyelesaikan test skrining, apakah anda yakin untuk membatalkannya?</string>
    <string name="title_form_not_finish">Form Data Belum Lengkap</string>
    <string name="message_please_check_data_not_filled">Harap periksa kembali data yang belum diisi dan tidak sesuai</string>
    <string name="title_do_you_want_recheck">Apakah anda yakin untuk memeriksa ulang?</string>
    <string name="message_are_you_sure_this_reset_data">Data yang telah dipilih akan dihapus dan kembali ke soal awal, apakah anda yakin?</string>
    <string name="title_are_you_sure">Apakah anda sudah yakin?</string>
    <string name="message_are_you_sure_this_data_ok">Data yang diisi sudah benar?</string>
    <string name="action_done">Selesaikan</string>
    <string name="label_good_news">Selamat, Hasil Skrining anda menunjukkan anda (%s) diduga negatif TB paru</string>
    <string name="label_bad_news">Sayang sekali, Hasil Skrining menunjukkan anda (%s) diduga positif TB paru</string>
    <string name="message_exit_result">Hasil screening sudah selesai, apakah anda ingin keluar?</string>
    <string name="action_yes">Iya</string>
    <string name="action_nope">Tidak</string>
</resources>