<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16dp">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/BaseTextView.Lato.Grey"
        android:text="@string/label_full_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:maxLength="100"
        android:maxLines="1" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/BaseTextView.Lato.Grey"
        android:text="@string/label_gender" />

    <RadioGroup
        android:id="@+id/rgSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:checked="true"
            android:text="@string/label_male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:text="@string/label_female" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/BaseTextView.Lato.Grey"
        android:text="@string/label_phone_number" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:maxLength="20"
        android:maxLines="1" />

</LinearLayout>